doubled font size and justify center

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,8 +1,8 @@
 .footer {
     display: flex;
     align-items: center;
-    height: 5rem;
+    height: 10rem;
     background-color: #dda0dd;
-    justify-content: space-around;
+    justify-content: center;
     color: #ffffff;
 }
