changed bg color to royal blue

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     height: 10rem;
-    background-color: lightblue;
+    background-color: royalblue;
     justify-content: center;
     color: #ffffff;
 }
