--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     height: 5rem;
-    background-color: lightblue;
+    background-color: royalblue;
     justify-content: space-around;
     box-shadow: 2px 2px 7px 2px lightgrey;
 }
