--- a/src/components/SignupForm/SignupForm.module.css
+++ b/src/components/SignupForm/SignupForm.module.css
@@ -1,11 +1,17 @@
-.form fieldset {
+.section fieldset {
     display: flex;
     flex-direction: column;
     width: 15rem;
     margin: 0 auto;
 }
 
-.form input {
+.section p {
+    color: red;
+    font-weight: 600;
+    text-align: center;
+}
+
+.section input {
     width: 100%;
     margin: .5rem 0 .5rem 0;
     border-radius: 3px;
@@ -13,7 +19,7 @@
     background-color: aliceblue;
 }
 
-.form button {
+.section button {
     width: 100%;
     height: 2.5rem;
     border-radius: 15px;
