--- a/src/components/SignupForm/SignupForm.module.css
+++ b/src/components/SignupForm/SignupForm.module.css
@@ -13,7 +13,7 @@
 
 .section input {
     width: 100%;
-    margin: .5rem 0 .5rem 0;
+    margin: 0.5rem 0 0.5rem 0;
     border-radius: 3px;
     height: 1.7rem;
     background-color: aliceblue;
