--- a/src/components/LoginForm/LoginForm.module.css
+++ b/src/components/LoginForm/LoginForm.module.css
@@ -1,11 +1,11 @@
-.form fieldset {
+.section fieldset {
     display: flex;
     flex-direction: column;
     width: 15rem;
     margin: 0 auto;
 }
 
-.form input {
+.section input {
     width: 100%;
     margin: 0.5rem 0 0.5rem 0;
     border-radius: 3px;
@@ -13,7 +13,7 @@
     background-color: aliceblue;
 }
 
-.form button {
+.section button {
     width: 100%;
     height: 2.5rem;
     border-radius: 15px;
@@ -23,4 +23,14 @@
     font-weight: 600;
     font-size: 1.2rem;
     margin: 0 auto;
+}
+
+.section button:disabled {
+    background-color: gray;
+}
+
+.section p {
+    color: red;
+    font-weight: 700;
+    text-align: center;
 }
